# SteamAudio-CMake

./: CMakeLists.txt  README.md
doc/: steamaudio_api.chm
include/: phonon.h
lib/Windows/x64/: phonon.lib
lib/Windows/x86/: phonon.lib
